--- a/locales/fi.json
+++ b/locales/fi.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Jaa Facebookissa",
-        "share_on_twitter": "Twiittaa Twitterissä",
+        "share_on_twitter": "Jaa X:ssä",
         "share_on_pinterest": "Pinnaa Pinterestissä"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "Tuotteita yhteensä",
       "remove_all_items_confirmation": "Poistetaanko kaikki {{ quantity }} tuotetta ostoskorista?",
       "remove_all": "Poista kaikki",
-      "cancel": "Peruuta"
+      "cancel": "Peruuta",
+      "remove_all_single_item_confirmation": "Poistetaanko 1 tuote ostoskorista?"
     }
   },
   "localization": {
