--- a/locales/sk-SK.json
+++ b/locales/sk-SK.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Zdielať na Facebooku",
-        "share_on_twitter": "Tweetovať na Twitteri",
+        "share_on_twitter": "Zdieľať na X",
         "share_on_pinterest": "Pripnúť na Pintereste"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -382,7 +382,8 @@
       "total_items": "Celkový počet položiek",
       "remove_all_items_confirmation": "Chcete z košíka odobrať všetky položky ({{ quantity }})?",
       "remove_all": "Odobrať všetky",
-      "cancel": "Zrušiť"
+      "cancel": "Zrušiť",
+      "remove_all_single_item_confirmation": "Chcete z košíka odobrať 1 položku?"
     }
   },
   "localization": {
