--- a/locales/zh-TW.schema.json
+++ b/locales/zh-TW.schema.json
@@ -56,8 +56,8 @@
       "name": "社群媒體",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X / Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1641,7 +1641,7 @@
             },
             "swatch_shape": {
               "label": "色樣",
-              "info": "瞭解如何顯示 [色樣](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "為商品選項啟用 [色樣](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)。",
               "options__1": {
                 "label": "圓形"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "色樣",
-              "info": "瞭解如何顯示 [色樣](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "為商品選項啟用 [色樣](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)。",
               "options__1": {
                 "label": "圓形"
               },
