--- a/locales/bg-BG.json
+++ b/locales/bg-BG.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Споделяне чрез Facebook",
-        "share_on_twitter": "Изпращане на туит в Twitter",
+        "share_on_twitter": "Споделяне в X",
         "share_on_pinterest": "Отбелязване в Pinterest"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "Общо артикули",
       "remove_all_items_confirmation": "Премахване на всички {{ quantity }} артикула от количката?",
       "remove_all": "Премахване на всички",
-      "cancel": "Отказ"
+      "cancel": "Отказ",
+      "remove_all_single_item_confirmation": "Премахване на 1 артикул от количката?"
     }
   },
   "localization": {
