--- a/locales/da.json
+++ b/locales/da.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Del på Facebook",
-        "share_on_twitter": "Tweet på Twitter",
+        "share_on_twitter": "Del på X",
         "share_on_pinterest": "Pin på Pinterest"
       },
       "links": {
-        "twitter": "X",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "Varer i alt",
       "remove_all_items_confirmation": "Vil du fjerne alle {{ quantity }} varer fra din indkøbskurv?",
       "remove_all": "Fjern alle",
-      "cancel": "Annuller"
+      "cancel": "Annuller",
+      "remove_all_single_item_confirmation": "Vil du fjerne 1 vare fra din indkøbskurv?"
     }
   },
   "localization": {
