--- a/locales/da.schema.json
+++ b/locales/da.schema.json
@@ -56,8 +56,8 @@
       "name": "Sociale medier",
       "settings": {
         "social_twitter_link": {
-          "label": "X",
-          "info": "https://twitter.com/shopify"
+          "label": "X/Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1650,7 +1650,7 @@
             },
             "swatch_shape": {
               "label": "Prøve",
-              "info": "Se, hvordan du viser [prøver](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Aktivér [prøver](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) for produktmuligheder.",
               "options__1": {
                 "label": "Cirkel"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Prøve",
-              "info": "Se, hvordan du viser [prøver](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Aktivér [prøver](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) for produktmuligheder.",
               "options__1": {
                 "label": "Cirkel"
               },
