--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -250,8 +250,8 @@
           "content": "Social accounts"
         },
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X / Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -861,7 +861,7 @@
             },
             "swatch_shape": {
               "label": "Swatch",
-              "info": "Learn how to display [swatches](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Enable [swatches](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) on product options.",
               "options__1": {
                 "label": "Circle"
               },
@@ -1996,7 +1996,7 @@
             },
             "swatch_shape": {
               "label": "Swatch",
-              "info": "Learn how to display [swatches](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Enable [swatches](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) on product options.",
               "options__1": {
                 "label": "Circle"
               },
