--- a/locales/es.json
+++ b/locales/es.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Compartir en Facebook",
-        "share_on_twitter": "Compartir en Twitter",
+        "share_on_twitter": "Compartir en X",
         "share_on_pinterest": "Guardar en Pinterest"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -370,7 +370,8 @@
       "total_items": "Total de artículos",
       "remove_all_items_confirmation": "¿Eliminar los {{ quantity }} artículos del carrito?",
       "remove_all": "Eliminar todos",
-      "cancel": "Cancelar"
+      "cancel": "Cancelar",
+      "remove_all_single_item_confirmation": "¿Eliminar 1 artículo de tu carrito?"
     }
   },
   "localization": {
