--- a/locales/es.schema.json
+++ b/locales/es.schema.json
@@ -56,8 +56,8 @@
       "name": "Redes sociales",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X / Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1650,7 +1650,7 @@
             },
             "swatch_shape": {
               "label": "Muestra",
-              "info": "Obtén información sobre cómo presentar [muestras](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Habilita [muestras](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) en las opciones de producto.",
               "options__1": {
                 "label": "Círculo"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Muestra",
-              "info": "Obtén información sobre cómo presentar [muestras](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Habilita [muestras](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) en las opciones de producto.",
               "options__1": {
                 "label": "Círculo"
               },
