--- a/locales/fi.schema.json
+++ b/locales/fi.schema.json
@@ -56,8 +56,8 @@
       "name": "Sosiaalinen media",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X (Twitter)",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1649,7 +1649,7 @@
             },
             "swatch_shape": {
               "label": "Väriruutu",
-              "info": "Lisätietoja siitä, miten voit näyttää [väriruudut](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Ota [väriruudut](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) käyttöön tuotevaihtoehtoihin.",
               "options__1": {
                 "label": "Ympyrä"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Väriruutu",
-              "info": "Lisätietoja siitä, miten voit näyttää [väriruudut](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Ota [väriruudut](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) käyttöön tuotevaihtoehtoihin.",
               "options__1": {
                 "label": "Ympyrä"
               },
