--- a/locales/fr.json
+++ b/locales/fr.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Partager sur Facebook",
-        "share_on_twitter": "Tweeter sur Twitter",
+        "share_on_twitter": "Partager sur X",
         "share_on_pinterest": "Épingler sur Pinterest"
       },
       "links": {
-        "twitter": "X",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -370,7 +370,8 @@
       "total_items": "Total des articles",
       "remove_all_items_confirmation": "Retirer les {{ quantity }} articles de votre panier ?",
       "remove_all": "Tout retirer",
-      "cancel": "Annuler"
+      "cancel": "Annuler",
+      "remove_all_single_item_confirmation": "Supprimer 1 article de votre panier ?"
     }
   },
   "localization": {
