--- a/locales/fr.schema.json
+++ b/locales/fr.schema.json
@@ -56,8 +56,8 @@
       "name": "Médias sociaux",
       "settings": {
         "social_twitter_link": {
-          "label": "X",
-          "info": "https://twitter.com/shopify"
+          "label": "X / Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1649,7 +1649,7 @@
             },
             "swatch_shape": {
               "label": "Échantillon",
-              "info": "Découvrez comment afficher les [échantillons](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Activez [échantillons](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) sur les options produits.",
               "options__1": {
                 "label": "Cercle"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Échantillon",
-              "info": "Découvrez comment afficher les [échantillons](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Activez [échantillons](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) sur les options produits.",
               "options__1": {
                 "label": "Cercle"
               },
