--- a/locales/hu.json
+++ b/locales/hu.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Megosztás a Facebookon",
-        "share_on_twitter": "Közzététel a Twitteren",
+        "share_on_twitter": "Megosztás az X-en",
         "share_on_pinterest": "Közzététel a Pinteresten"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "Összes termék",
       "remove_all_items_confirmation": "Eltávolítod mind a(z) {{ quantity }} terméket a kosárból?",
       "remove_all": "Az összes eltávolítása",
-      "cancel": "Mégse"
+      "cancel": "Mégse",
+      "remove_all_single_item_confirmation": "Eltávolítod ezt a(z) 1 terméket a kosárból?"
     }
   },
   "localization": {
