--- a/locales/id.json
+++ b/locales/id.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Bagikan di Facebook",
-        "share_on_twitter": "Tweet di Twitter",
+        "share_on_twitter": "Bagikan di X",
         "share_on_pinterest": "Pin di Pinterest"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "Total item",
       "remove_all_items_confirmation": "Hapus semua item yang berjumlah {{ quantity }} dari keranjang Anda?",
       "remove_all": "Hapus semuanya",
-      "cancel": "Batalkan"
+      "cancel": "Batalkan",
+      "remove_all_single_item_confirmation": "Hapus 1 item dari keranjang Anda?"
     }
   },
   "localization": {
