--- a/locales/it.json
+++ b/locales/it.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Condividi su Facebook",
-        "share_on_twitter": "Twitta su Twitter",
+        "share_on_twitter": "Condividi su X",
         "share_on_pinterest": "Aggiungi un pin su Pinterest"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -370,7 +370,8 @@
       "total_items": "Articoli totali",
       "remove_all_items_confirmation": "Rimuovere tutti i {{ quantity }} articoli dal tuo carrello?",
       "remove_all": "Rimuovi tutto",
-      "cancel": "Annulla"
+      "cancel": "Annulla",
+      "remove_all_single_item_confirmation": "Rimuovere un articolo dal carrello?"
     }
   },
   "localization": {
