--- a/locales/it.schema.json
+++ b/locales/it.schema.json
@@ -56,8 +56,8 @@
       "name": "Social media",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X / Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1650,7 +1650,7 @@
             },
             "swatch_shape": {
               "label": "Campione di colore",
-              "info": "Scopri come visualizzare i [campioni di colore](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Abilita i [campioni di colore](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) nelle opzioni del prodotto.",
               "options__1": {
                 "label": "Tondo"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Campione di colore",
-              "info": "Scopri come visualizzare i [campioni di colore](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Abilita i [campioni di colore](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) nelle opzioni del prodotto.",
               "options__1": {
                 "label": "Tondo"
               },
