--- a/locales/ja.json
+++ b/locales/ja.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Facebookでシェアする",
-        "share_on_twitter": "Twitterにツイートする",
+        "share_on_twitter": "Xで共有する",
         "share_on_pinterest": "Pinterestでピンする"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "アイテムの総数",
       "remove_all_items_confirmation": "カートから{{ quantity }}個のアイテムすべてを削除しますか？",
       "remove_all": "すべてを削除",
-      "cancel": "キャンセル"
+      "cancel": "キャンセル",
+      "remove_all_single_item_confirmation": "カートからアイテムを1個削除しますか？"
     }
   },
   "localization": {
