--- a/locales/ko.json
+++ b/locales/ko.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Facebook에서 공유",
-        "share_on_twitter": "Twitter에서 트윗 작성",
+        "share_on_twitter": "X에 공유",
         "share_on_pinterest": "Pinterest에 고정하기"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X(Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "총 품목 수",
       "remove_all_items_confirmation": "카트에서 {{ quantity }}개 품목을 모두 제거하시겠습니까?",
       "remove_all": "모두 제거",
-      "cancel": "취소"
+      "cancel": "취소",
+      "remove_all_single_item_confirmation": "카트에서 1개의 품목을 제거하시겠습니까?"
     }
   },
   "localization": {
