--- a/locales/ko.schema.json
+++ b/locales/ko.schema.json
@@ -56,8 +56,8 @@
       "name": "소셜 미디어",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X / Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1641,7 +1641,7 @@
             },
             "swatch_shape": {
               "label": "견본",
-              "info": "[견본](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)을 표시할 방법을 알아보세요",
+              "info": "제품 옵션에서 [견본](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)을 활성화합니다.",
               "options__1": {
                 "label": "원형"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "견본",
-              "info": "[견본](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)을 표시할 방법을 알아보세요",
+              "info": "제품 옵션에서 [견본](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)을 활성화합니다.",
               "options__1": {
                 "label": "원형"
               },
