--- a/locales/lt-LT.json
+++ b/locales/lt-LT.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Bendrinti „Facebook“",
-        "share_on_twitter": "Skelbti „Twitter“",
+        "share_on_twitter": "Bendrinti X",
         "share_on_pinterest": "Skelbti „Pinterest“"
       },
       "links": {
-        "twitter": "„Twitter“",
+        "twitter": "X („Twitter“)",
         "facebook": "„Facebook“",
         "pinterest": "„Pinterest“",
         "instagram": "„Instagram“",
@@ -382,7 +382,8 @@
       "total_items": "Prekių iš viso",
       "remove_all_items_confirmation": "Pašalinti visas {{ quantity }} prekes (-ių) iš krepšelio?",
       "remove_all": "Pašalinti viską",
-      "cancel": "Atšaukti"
+      "cancel": "Atšaukti",
+      "remove_all_single_item_confirmation": "Pašalinti 1 prekę iš krepšelio?"
     }
   },
   "localization": {
