--- a/locales/nb.schema.json
+++ b/locales/nb.schema.json
@@ -56,8 +56,8 @@
       "name": "Sosiale medier",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X / Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1649,7 +1649,7 @@
             },
             "swatch_shape": {
               "label": "Fargekart",
-              "info": "Finn ut hvordan du viser [fargekart](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Aktiver [fargekart](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) på produktalternativer.",
               "options__1": {
                 "label": "Sirkel"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Fargekart",
-              "info": "Finn ut hvordan du viser [fargekart](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Aktiver [fargekart](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) på produktalternativer.",
               "options__1": {
                 "label": "Sirkel"
               },
