--- a/locales/nl.json
+++ b/locales/nl.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Delen op Facebook",
-        "share_on_twitter": "Twitteren op Twitter",
+        "share_on_twitter": "Delen op X",
         "share_on_pinterest": "Pinnen op Pinterest"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (voorheen Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "Totaal aantal artikelen",
       "remove_all_items_confirmation": "Alle {{ quantity }} artikelen uit je winkelwagen verwijderen?",
       "remove_all": "Alles verwijderen",
-      "cancel": "Annuleren"
+      "cancel": "Annuleren",
+      "remove_all_single_item_confirmation": "1 artikel uit je winkelwagen verwijderen?"
     }
   },
   "localization": {
