--- a/locales/nl.schema.json
+++ b/locales/nl.schema.json
@@ -56,8 +56,8 @@
       "name": "Social media",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X / voorheen Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1650,7 +1650,7 @@
             },
             "swatch_shape": {
               "label": "Staal",
-              "info": "Ontdek hoe je [stalen](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) weergeeft",
+              "info": "Schakel [stalen](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) in bij productopties.",
               "options__1": {
                 "label": "Cirkel"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Staal",
-              "info": "Ontdek hoe je [stalen](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) weergeeft",
+              "info": "Schakel [stalen](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) in bij productopties.",
               "options__1": {
                 "label": "Cirkel"
               },
