--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Compartilhar no Facebook",
-        "share_on_twitter": "Tuitar",
+        "share_on_twitter": "Compartilhar no X",
         "share_on_pinterest": "Incluir como pin no Pinterest"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -370,7 +370,8 @@
       "total_items": "Total de itens",
       "remove_all_items_confirmation": "Remover todos os {{ quantity }} itens do carrinho?",
       "remove_all": "Remover tudo",
-      "cancel": "Cancelar"
+      "cancel": "Cancelar",
+      "remove_all_single_item_confirmation": "Remover 1 item do carrinho?"
     }
   },
   "localization": {
