--- a/locales/pt-BR.schema.json
+++ b/locales/pt-BR.schema.json
@@ -56,8 +56,8 @@
       "name": "Redes sociais",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X/Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1649,7 +1649,7 @@
             },
             "swatch_shape": {
               "label": "Amostra",
-              "info": "Saiba como exibir [amostras](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Habilite [amostras](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) nas opções de produtos.",
               "options__1": {
                 "label": "Círculo"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Amostra",
-              "info": "Saiba como exibir [amostras](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Habilite [amostras](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) nas opções de produtos.",
               "options__1": {
                 "label": "Círculo"
               },
