--- a/locales/pt-PT.schema.json
+++ b/locales/pt-PT.schema.json
@@ -56,8 +56,8 @@
       "name": "Redes sociais",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X / Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1641,7 +1641,7 @@
             },
             "swatch_shape": {
               "label": "Paleta",
-              "info": "Saiba como exibir [paletas](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Ative [paletas](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) nas opções de produto.",
               "options__1": {
                 "label": "Círculo"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Paleta",
-              "info": "Saiba como exibir [paletas](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Ative [paletas](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) nas opções de produto.",
               "options__1": {
                 "label": "Círculo"
               },
