--- a/locales/ro-RO.json
+++ b/locales/ro-RO.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Distribuiți pe Facebook",
-        "share_on_twitter": "Dați un Tweet pe Twitter",
+        "share_on_twitter": "Partajează pe X",
         "share_on_pinterest": "Postați un Pin pe Pinterest"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -370,7 +370,8 @@
       "total_items": "Total articole",
       "remove_all_items_confirmation": "Elimini toate cele {{ quantity }} articole din coș?",
       "remove_all": "Elimină tot",
-      "cancel": "Anulează"
+      "cancel": "Anulează",
+      "remove_all_single_item_confirmation": "Elimini 1 articol din coș?"
     }
   },
   "localization": {
