--- a/locales/ru.json
+++ b/locales/ru.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Поделиться в Facebook",
-        "share_on_twitter": "Опубликовать в Твиттере",
+        "share_on_twitter": "Поделиться в X",
         "share_on_pinterest": "Сохранить в Pinterest"
       },
       "links": {
-        "twitter": "Твиттер",
+        "twitter": "X (Твиттер)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -382,7 +382,8 @@
       "total_items": "Общее количество товаров",
       "remove_all_items_confirmation": "Удалить все товары ({{ quantity }}) из корзины?",
       "remove_all": "Удалить все",
-      "cancel": "Отменить"
+      "cancel": "Отменить",
+      "remove_all_single_item_confirmation": "Удалить 1 товар из корзины?"
     }
   },
   "localization": {
