--- a/locales/sl-SI.json
+++ b/locales/sl-SI.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Delite v Facebooku",
-        "share_on_twitter": "Tvitnite v Twitterju",
+        "share_on_twitter": "Delite na omrežju X",
         "share_on_pinterest": "Pripnite v Pinterestu"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -382,7 +382,8 @@
       "total_items": "Skupno število izdelkov",
       "remove_all_items_confirmation": "Ali želite iz košarice odstraniti vse izdelke ({{ quantity }})?",
       "remove_all": "Odstrani vse",
-      "cancel": "Prekliči"
+      "cancel": "Prekliči",
+      "remove_all_single_item_confirmation": "Ali želite iz košarice odstraniti 1 izdelek?"
     }
   },
   "localization": {
