--- a/locales/sv.json
+++ b/locales/sv.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Dela på Facebook",
-        "share_on_twitter": "Tweet på Twitter",
+        "share_on_twitter": "Dela på X",
         "share_on_pinterest": "Spara en pin på Pinterest"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "Totalt antal artiklar",
       "remove_all_items_confirmation": "Ta bort alla {{ quantity }} artiklar från din varukorg?",
       "remove_all": "Ta bort alla",
-      "cancel": "Avbryt"
+      "cancel": "Avbryt",
+      "remove_all_single_item_confirmation": "Vill du ta bort 1 artikel från varukorgen?"
     }
   },
   "localization": {
