--- a/locales/sv.schema.json
+++ b/locales/sv.schema.json
@@ -56,8 +56,8 @@
       "name": "Sociala medier",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X / Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1641,7 +1641,7 @@
             },
             "swatch_shape": {
               "label": "Prov",
-              "info": "Läs om hur du visar [prover](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Aktivera [swatches](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) på produktalternativ.",
               "options__1": {
                 "label": "Cirkel"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Prov",
-              "info": "Läs om hur du visar [prover](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Aktivera [swatches](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) på produktalternativ.",
               "options__1": {
                 "label": "Cirkel"
               },
