--- a/locales/th.json
+++ b/locales/th.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "แชร์ใน Facebook",
-        "share_on_twitter": "ทวีตใน Twitter",
+        "share_on_twitter": "แชร์บน X",
         "share_on_pinterest": "ปักหมุดบน Pinterest"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "รายการสินค้าทั้งหมด",
       "remove_all_items_confirmation": "ต้องการลบสินค้าทั้งหมด {{ quantity }} รายการออกจากตะกร้าสินค้าหรือไม่",
       "remove_all": "ลบออกทั้งหมด",
-      "cancel": "ยกเลิก"
+      "cancel": "ยกเลิก",
+      "remove_all_single_item_confirmation": "ต้องการลบ 1 รายการออกจากตะกร้าสินค้าหรือไม่"
     }
   },
   "localization": {
