--- a/locales/tr.json
+++ b/locales/tr.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "Facebook'ta paylaş",
-        "share_on_twitter": "Twitter'da tweet'le",
+        "share_on_twitter": "X'te paylaş",
         "share_on_pinterest": "Pinterest'te pin ekle"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "Toplam ürün sayısı",
       "remove_all_items_confirmation": "{{ quantity }} ürünün tamamı sepetten kaldırılsın mı?",
       "remove_all": "Tümünü kaldır",
-      "cancel": "İptal"
+      "cancel": "İptal",
+      "remove_all_single_item_confirmation": "1 ürün sepetten kaldırılsın mı?"
     }
   },
   "localization": {
