--- a/locales/tr.schema.json
+++ b/locales/tr.schema.json
@@ -56,8 +56,8 @@
       "name": "Sosyal medya",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X/Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1649,7 +1649,7 @@
             },
             "swatch_shape": {
               "label": "Numune parça",
-              "info": "[Numune parçalarını](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) nasıl görüntüleyeceğinizi öğrenin",
+              "info": "Ürün seçeneklerinde [numune parçaları](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) etkinleştirin.",
               "options__1": {
                 "label": "Yuvarlak"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Numune parça",
-              "info": "[Numune parçalarını](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) nasıl görüntüleyeceğinizi öğrenin",
+              "info": "Ürün seçeneklerinde [numune parçaları](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) etkinleştirin.",
               "options__1": {
                 "label": "Yuvarlak"
               },
