--- a/locales/vi.schema.json
+++ b/locales/vi.schema.json
@@ -56,8 +56,8 @@
       "name": "Truyền thông xã hội",
       "settings": {
         "social_twitter_link": {
-          "label": "Twitter",
-          "info": "https://twitter.com/shopify"
+          "label": "X/Twitter",
+          "info": "https://x.com/shopify"
         },
         "social_facebook_link": {
           "label": "Facebook",
@@ -1650,7 +1650,7 @@
             },
             "swatch_shape": {
               "label": "Mẫu",
-              "info": "Tìm hiểu cách hiển thị [swatches](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Bật [swatches](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) cho tùy chọn sản phẩm.",
               "options__1": {
                 "label": "Tròn"
               },
@@ -2505,7 +2505,7 @@
             },
             "swatch_shape": {
               "label": "Mẫu",
-              "info": "Tìm hiểu cách hiển thị [swatches](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches)",
+              "info": "Bật [swatches](https://help.shopify.com/en/manual/online-store/themes/theme-structure/theme-settings#options-with-swatches) cho tùy chọn sản phẩm.",
               "options__1": {
                 "label": "Tròn"
               },
