--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "在 Facebook 上共享",
-        "share_on_twitter": "在 Twitter 上发推文",
+        "share_on_twitter": "在 X 上分享",
         "share_on_pinterest": "固定在 Pinterest 上"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "商品总数",
       "remove_all_items_confirmation": "删除您购物车中的全部 {{ quantity }} 件商品？",
       "remove_all": "全部删除",
-      "cancel": "取消"
+      "cancel": "取消",
+      "remove_all_single_item_confirmation": "从购物车中删除 1 件商品？"
     }
   },
   "localization": {
