--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -13,11 +13,11 @@
     "social": {
       "alt_text": {
         "share_on_facebook": "分享至 Facebook",
-        "share_on_twitter": "在 Twitter 上發佈 Twitter 貼文",
+        "share_on_twitter": "分享至 X",
         "share_on_pinterest": "在 Pinterest 上發佈 Pin 貼文"
       },
       "links": {
-        "twitter": "Twitter",
+        "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
         "instagram": "Instagram",
@@ -358,7 +358,8 @@
       "total_items": "品項總數",
       "remove_all_items_confirmation": "是否要從購物車移除全部 {{ quantity }} 個品項？",
       "remove_all": "全部移除",
-      "cancel": "取消"
+      "cancel": "取消",
+      "remove_all_single_item_confirmation": "是否要從您的購物車移除 1 個品項？"
     }
   },
   "localization": {
